--- a/package.json
+++ b/package.json
@@ -12,17 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.10",
+    "@angular/cdk": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "@types/googlemaps": "^3.30.11",
+    "angular2-flash-message": "^1.0.2",
+    "angularfire2": "^5.0.0-rc.11",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "firebase": "^5.2.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
+    "tether": "^1.4.4",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
